Add existing project files prior to the push to GitHub.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,8 @@
       integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer">
+      <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
+
     <title>React App</title>
   </head>
   <body>
