--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -42,6 +42,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCETfYHnB3ZszmOzR7br1tWUSI7XpBwJk4&libraries=places"></script>
 
     <title>React App</title>
   </head>
