--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -42,6 +42,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCETfYHnB3ZszmOzR7br1tWUSI7XpBwJk4&libraries=places"></script>
 
     <title>React App</title>
